force-app/src/objects/TR1__Checkpoint_Columns__mdt.object
<CustomObject>
    <fields>
        <fullName>TR1__Label__c</fullName>
        <description>The API name of the label to be used as header for this column</description>
        <inlineHelpText>The API name of the label to be used as header for this column</inlineHelpText>
        <label>Custom Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Lookup_Type__c</fullName>
        <description>Object records to use to query the field for this column.</description>
        <inlineHelpText>Object records to use to query the field for this column.</inlineHelpText>
        <label>Lookup Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                    <default>true</default>
                    <label>Contact</label>
                </value>
                <value>
                    <fullName>Job</fullName>
                </value>
                <value>
                    <fullName>Action Validator Rule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Object__c</fullName>
        <description>The API name of the object the field in this column is from</description>
        <inlineHelpText>The API name of the object the field in this column is from</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Order__c</fullName>
        <description>The order in which this column is displayed. Lowest numbers go first.</description>
        <inlineHelpText>The order in which this column is displayed. Lowest numbers go first.</inlineHelpText>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Path__c</fullName>
        <description>The API name of the field to be shown in this column.</description>
        <inlineHelpText>The API name of the field to be shown in this column.</inlineHelpText>
        <label>Field API name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Related_Field__c</fullName>
        <description>API name of the field containing the relation to the lookup type.</description>
        <inlineHelpText>API name of the field containing the relation to the lookup type.</inlineHelpText>
        <label>Related Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Checkpoint Modal Column Definition</label>
    <pluralLabel>Checkpoint Modal Column Definitions</pluralLabel>
</CustomObject>